@@ -1,9 +1,9 @@
 ## Title: AutoCategory
-## APIVersion: 101044 101045
+## APIVersion: 101046 101045
 ## Author: Shadowfen, crafty35a, RockingDice, Friday_the13_rus
 ## Description: Inventory categorization. Type "/ac" for settings
-## Version: 4.3.7
-## AddOnVersion: 115
+## Version: 4.3.8
+## AddOnVersion: 116
 ## SavedVariables: AutoCategorySavedVars AutoCatRules
 ## DependsOn: LibAddonMenu-2.0>=36 LibCustomMenu LibSFUtils>=55 LibMediaProvider-1.0>=30 LibDebugLogger>=263
 ## OptionalDependsOn: GearChangerByIakoni FCOItemSaver QuickMenu ItemSaver ItemMarker UnknownTracker>=75 MasterMerchant TamrielTradeCentre SetTrack CharacterKnowledge
@@ -22,8 +22,10 @@ Hooks_Keyboard.lua
 Hooks_Gamepad.lua
 AC_Classes.lua
 AutoCategory.lua
+settings/UI_Utilities.lua
 settings/GeneralMenu.lua
 settings/AppearanceMenu.lua
+settings/GamepadMenu.lua
 ;settings/OrderListUI.lua
 ;settings/DisplayListUI.lua
 AddonMenu.lua
