@@ -1,3 +1,7 @@
+[COLOR="DeepSkyBlue"]4.3.8 (116)[/COLOR]:
+[LIST]
+[*] API bump
+[/LIST]
 
 [COLOR="DeepSkyBlue"]4.3.7 (115)[/COLOR]:
 [LIST]
